# PyOSC

./: .gitignore  CHANGELOG.md  CONTRIBUTING.MD  LICENSE  README.md  TESTING.md  TESTS_COMPLETE.md  TEST_SUITE_SUMMARY.md  latest  mkdocs.yml  next  out.txt  pyproject.toml  pytest.ini  roadmap.md  run_tests.sh  versions.json
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml  tests.yml
.gitlab/: .gitlab-ci.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/1.0.0/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/api_reference/: index.html
1.0.1/contributing/: index.html
1.0.1/roadmap/: index.html
1.0.10/: 404.html  index.html  sitemap.xml
1.0.10/api_reference/: index.html
1.0.10/contributing/: index.html
1.0.10/roadmap/: index.html
1.0.11/: 404.html  index.html  sitemap.xml
1.0.11/api_reference/: index.html
1.0.11/contributing/: index.html
1.0.11/roadmap/: index.html
1.0.12/: 404.html  index.html  sitemap.xml
1.0.12/api_reference/: index.html
1.0.12/contributing/: index.html
1.0.12/roadmap/: index.html
1.0.12/search/: search_index.json
1.0.15/: 404.html  index.html  sitemap.xml
1.0.15/api_reference/: index.html
1.0.15/changelog/: index.html
1.0.15/contributing/: index.html
1.0.15/roadmap/: index.html
1.0.15/search/: search_index.json
1.0.17/: 404.html  index.html  sitemap.xml
1.0.17/api_reference/: index.html
1.0.17/changelog/: index.html
1.0.17/contributing/: index.html
1.0.17/roadmap/: index.html
1.0.18/: 404.html  index.html  sitemap.xml
1.0.18/api_reference/: index.html
1.0.18/changelog/: index.html
1.0.18/contributing/: index.html
1.0.18/roadmap/: index.html
1.0.19/: 404.html  index.html  sitemap.xml
1.0.19/api_reference/: index.html
1.0.19/changelog/: index.html
1.0.19/contributing/: index.html
1.0.19/roadmap/: index.html
1.0.19/search/: search_index.json
1.0.2/: 404.html  index.html  sitemap.xml
1.0.2/api_reference/: index.html
1.0.2/contributing/: index.html
1.0.2/roadmap/: index.html
1.0.3/: 404.html  index.html  sitemap.xml
1.0.3/api_reference/: index.html
1.0.3/contributing/: index.html
1.0.3/roadmap/: index.html
1.0.4/: 404.html  index.html  sitemap.xml
1.0.4/api_reference/: index.html
1.0.4/roadmap/: index.html
1.0.5/: 404.html  index.html  sitemap.xml
1.0.6/: 404.html  index.html  sitemap.xml
1.0.7/: 404.html  index.html  sitemap.xml
1.0.8/: 404.html  index.html  sitemap.xml
1.0.9/: 404.html  index.html  sitemap.xml
1.1.0/: 404.html  index.html  main.jinja  sitemap.xml
1.1.0rc1/: 404.html  index.html  sitemap.xml
1.1.0rc3/: 404.html  index.html  sitemap.xml
1.1.0rc4/: 404.html  index.html  sitemap.xml
1.1.1/: 404.html  index.html  sitemap.xml
2.0.0b1/: 404.html  index.html  sitemap.xml
2.0.0b10/: 404.html  index.html  sitemap.xml
2.0.0b3/: 404.html  index.html  sitemap.xml
2.0.0b5/: 404.html  index.html  sitemap.xml
2.0.0b7/: 404.html  index.html  sitemap.xml
2.0.0b9/: 404.html  index.html  sitemap.xml
docs/: api_reference.md  contributing.md  index.md  roadmap.md
examples/: simple_message_tcp.py  simple_message_udp.py
overrides/: main.html  outdated-warning.jinja  pre-release-warning.jinja
pyosc/: __init__.py  call_handler.py  dispatcher.py  handler.py  listener.py  message.py  peer.py  subscriptions.py
tests/: README.md  __init__.py  conftest.py  test_call_handler.py  test_dispatcher.py  test_integration.py  test_peer.py
(+260 files in other folders)
