[project]
name = "pyosc"
version = "1.0.0"
description = "A package to add fully featured OSC support to python"
authors = [
    {name = "Morph Tollon",email = "code@morphtollon.co.uk"}
]
license = "MIT License"
readme = "README.md"
requires-python = "<3.14,>=3.13"
dependencies = [
    "sockets (>=1.0.0,<2.0.0)",
    "oscparser (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
