[project]
name = "pyosc"
version = "1.0.0"
description = "A package to add fully featured OSC support to python"
authors = [
    {name = "Morph Tollon",email = "code@morphtollon.co.uk"}
]

maintainers = [
    { name = "Morph Tollon", email = "code@morphtollon.co.uk"}
]
keywords = ["osc", "sound", "midi", "music", "sockets", "transport", "Lighting", "Theatre"]
license = "MIT"
readme = "README.md"
requires-python = "<3.14,>=3.13"
dependencies = [
    "sockets (>=1.0.0,<2.0.0)",
    "oscparser (>=1.0.2,<2.0.0)"
]

[tool.poetry.dependencies]
pydantic = "^2.12.5"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright (>=1.1.407,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "lefthook (>=2.0.13,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]
ci = [
    "pydantic (>=2.12.5,<3.0.0)",
    "twine (>=6.2.0,<7.0.0)"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W1", "W2", "F", "RUF", "I"]

[tool.ruff]
line-length = 127

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["tests", ".venv", "test_*"]
