[project]
name = "pyopensoundcontrol"
version = "1.0.14"
description = "A package to add fully featured OSC support to python"
authors = [
    {name = "Morph Tollon",email = "code@morphtollon.co.uk"}
]

maintainers = [
    { name = "Morph Tollon", email = "code@morphtollon.co.uk"}
]
keywords = ["osc", "sound", "midi", "music", "sockets", "transport", "Lighting", "Theatre"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "oscparser (>=2.0.3,<3.0.0)",    
]
[project.urls]
Repository = "https://github.com/Theatre-Tools/PyOSC"
Homepage = "https://github.com/Theatre-Tools/PyOSC"
Issues = "https://github.com/Theatre-Tools/PyOSC/issues"
Documentation = "https://theatre-tools.github.io/PyOSC/latest/"

[tool.poetry.dependencies]
pydantic = "^2.12.5"

[tool.poetry]
packages = [{ include = "pyosc"}]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["pyosc*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright (>=1.1.408,<2.0.0)",
    "ruff>=0.14.10",
    "lefthook (>=2.0.13,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "pytest-timeout (>=2.2.0,<3.0.0)"
]
ci = [
    "pydantic (>=2.12.5,<3.0.0)",
    "twine (>=6.2.0,<7.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)"
]
docs = [
    "mkdocs-material (>=9.7.1,<10.0.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.5.0,<2.0.0)",
    "mkdocs-git-committers-plugin-2 (>=2.5.0,<3.0.0)",
    "mike (>=2.1.3,<3.0.0)",
    "markdown (>=3.10,<4.0)"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W1", "W2", "F", "RUF", "I"]

[tool.ruff]
line-length = 127

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv"]
